--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -1,6 +1,6 @@
 <mat-card class="max-w-7xl mx-auto" *ngIf="cart.items.length">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-full">
-        {% comment %} <ng-container matColumnDef="product">
+        <ng-container matColumnDef="product">
             <th mat-header-cell *matHeaderCellDef> Product</th>
             <td mat-cell *matCellDef="let element">
                 <img src="{{element.product}}" alt="product" class="w-[100px] my-5" />
@@ -8,7 +8,7 @@
             <td mat-footer-cell *matFooterCellDef>
                 <button mat-raised-button routerLink="/home">Continue shopping</button>
             </td>
-        </ng-container> {% endcomment %}
+        </ng-container>
 
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
