--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,8 +13,8 @@
                 <span class="mr-16">{{itemsQuantity}} Items</span>
                 <a routerLink="cart">View Cart</a>
             </div>
-            <div *ngif="cart.items.length" class="py-3">
-                <div *ngfor="let item of cart.items" class="flex justify-between font-light mb-2">
+            <div *ngIf="cart.items.length" class="py-3">
+                <div *ngFor="let item of cart.items" class="flex justify-between font-light mb-2">
                     {{item.name}} x {{item.quantity}}
                     <span class="font-bold">{{ item.price | currency }}</span>
                 </div>
